typedef of DragDataRef for BB.
Created attachment 132180 [details] Patch
Comment on attachment 132180 [details] Patch LGTM. IIRC we do not enable dragging by default though?
(In reply to comment #2) > (From update of attachment 132180 [details]) > LGTM. IIRC we do not enable dragging by default though? You are right, we don't enable dragging.
Comment on attachment 132180 [details] Patch Clearing flags on attachment: 132180 Committed r111113: <http://trac.webkit.org/changeset/111113>
All reviewed patches have been landed. Closing bug.