[BlackBerry] Add typedef of DragDataRef for blackberry https://bugs.webkit.org/show_bug.cgi?id=81301

Reviewed by Rob Buis.

* platform/DragData.h:


Canonical link: https://commits.webkit.org/98660@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111113 268f45cc-cd09-0410-ab3c-d52691b4dbfc